--- a/real-time-chat-front/src/styles.css
+++ b/real-time-chat-front/src/styles.css
@@ -1,4 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+html, body, app-root {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: #fafafa;
+    color: rgba(0, 0, 0, 0.87);
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
