--- a/real-time-chat-front/src/app/chat-room/chat-room.component.css
+++ b/real-time-chat-front/src/app/chat-room/chat-room.component.css
@@ -1,8 +1,13 @@
 .join-chat-form {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 10px;
+  flex-direction: column;
+  max-width: 250px;
+}
+
+.color-input {
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+  max-width: 100px;
 }
 
 .message-list {
@@ -13,6 +18,7 @@
   margin-bottom: 10px;
   font-size: 18px;
 }
+
 
 .message-form {
   width: 100%;
@@ -27,4 +33,23 @@
   flex: 1;
 }
 
+.message{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: .25rem;
+}
 
+.message .avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.message .message-body {
+  flex: 1;
+}
