--- a/real-time-chat-front/src/app/chat-room/chat-room.component.css
+++ b/real-time-chat-front/src/app/chat-room/chat-room.component.css
@@ -16,7 +16,7 @@
   min-height: 400px;
   overflow-y: scroll;
   margin-bottom: 10px;
-  font-size: 18px;
+  font-size: 14px;
 }
 
 
@@ -40,14 +40,31 @@
   margin-bottom: .25rem;
 }
 
+.own-message {
+  flex-direction: row-reverse;
+}
+
+.message-card {
+  background-color: #d1d1d1;
+}
+
+.own-message .message-card {
+  background-color: #bdeeb6;
+}
+
 .message .avatar {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 2px solid #888888;
+}
+
+.message-user {
+  font-weight: bold;
+  font-size: 12px;
 }
 
 .message .message-body {
