--- a/real-time-chat-front/src/app/chat-room/chat-room.component.css
+++ b/real-time-chat-front/src/app/chat-room/chat-room.component.css
@@ -10,13 +10,21 @@
   max-width: 100px;
 }
 
+.notification-area {
+  overflow-y: auto;
+  min-height: 75px;
+  max-height: 75px;
+}
+
 .message-list {
   border: 1px solid #ccc;
   padding: 10px;
-  min-height: 400px;
+  min-height: calc(100vh - 275px);
+  max-height: calc(100vh - 275px);
   overflow-y: scroll;
   margin-bottom: 10px;
   font-size: 14px;
+  margin: 1rem 0;
 }
 
 
